# 2024-cpl-coding

./: CMakeLists.txt  README.md  hello.c
0-intro/: guess.c
1-types-io/: CMakeLists.txt  admin-final.c  admin-scanf-final.c  admin-scanf.c  circle.c  mol.c  printf-error.c  printf-ub.c  scanf-c17-ex2  scanf-c17-ex2-input.txt  scanf-c17-ex2.c  scanf-c17-ex3  scanf-c17-ex3-input.txt  scanf-c17-ex3.c  scanf-ub.c  sphere.c
10-function-pointers/: bsearch-gnuc.c  bsearch.c  decl.c  integrate.c  signal.c  sort.c
11-struct/: CMakeLists.txt  musician.c
12-linked-list/: README.md  josephus.c
13-recursion/: bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-iter.c  gcd-re.c  hilbert-curve-text.c  hilbert-curve-ui.c  main-re.c  mergesort-re.c  min-re.c  min.c  n-queens.c  sum-re.c
2-if/: CMakeLists.txt  README.md
2-if-for-array/: README.md  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: binary-search-for.c  binary-search.c  digits-for.c  digits-while.c  palindrome.c  primes.c  selection-sort.c  stars.c
4-loops/: game-of-life.c  insertion-sort-bsearch.c  insertion-sort.c  merge.c
5-function/: CMakeLists.txt  binary-search.c  game-of-life-transformed.c  game-of-life.c  guess.c  leap.c  merge.c  palindrome.c  primes.c  selection-sort.c  stars.c
6-data-types/: CMakeLists.txt  compare.c  explict-conversion.c  float-assoc.c  int-limits.c  signed-overflow-fix.c  timing-primes.c  timing.c  unsigned-wrap-fix.c  unsigned-wrap.c
6-recursion/: CMakeLists.txt
7-pointers-arrays/: pointer  (+5 more)
(+29 files in other folders)
